# sushkov-test-task

./: data_loader.py  main.py  paths.py  pyproject.toml  readme.md  saver.py  task_solvers.py
test_task_data_scince/: products_python.csv  sales_python.csv  test_task.ipynb
