[tool.poetry]
name = "sushkoff"
version = "0.1.0"
description = ""
authors = ["Ilya Isko <ilufkai2000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.22.4"
pandas = "^1.4.2"
scikit-learn = "^1.1.1"
seaborn = "^0.11.2"
jupyterlab = "^3.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
